--- a/AspNetTemplate/Web.config
+++ b/AspNetTemplate/Web.config
@@ -17,6 +17,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="Ambiente" value="Meu Computador"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
